database/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
        - name: database
          image: postgres:15.1 
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: "128Mi"
              cpu: "250m"
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: database-volume
      volumes:
        - name: database-volume
          persistentVolumeClaim:
            claimName: database-pvc
