database/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: database-service
  namespace: apps
  labels:
    app: database
spec:
  type: ExternalName
  ports:
    - port: 5432
  externalName: internal.database.prod.dev
  selector:
    app: database
